--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -1,7 +1,7 @@
 .dangky input[type="submit"] {
     background-color: #414040;
     border: medium none;
-    color: #212121;
+    color: white;
     cursor: pointer;
     font-size: 14px;
     font-weight: 600;
